fix: Remove left margin on Countdown to Marathon Christmas container on wrap.

--- a/src/scss/pages/_mc_index-welcome_to_mc.scss
+++ b/src/scss/pages/_mc_index-welcome_to_mc.scss
@@ -44,6 +44,7 @@
 #title_card--welcome_to_marathon_christmas {
   display: flex;
   flex-direction: column;
+  background: orangered;
 }
 
 #welcome_to_marathon_christmas {
@@ -82,6 +83,7 @@
   flex-direction: column;
   justify-content: space-between;
   margin-left: 25px;
+  background: blue;
 }
 
 #title_card--current_marathon_details h2 {
@@ -258,6 +260,8 @@ td.current_marathon_times {
     /* Add space between bottom of "Welcome to Marathon Christmas" container 
         & top of "Countdown to WPRBXmas!" container. */ 
     margin-top: 20px;
+    /* Remove left margin on "Welcome to Marahton Christmas" container on wrap. */
+    margin-left: 0px;
 }
 }
 /* #endregion MEDIA QUERIES -- ALL MEDIA QUERIES */
